cluster/apps/capacitor/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capacitor
  namespace: flux-system
  labels:
    app.kubernetes.io/name: capacitor
    app.kubernetes.io/instance: capacitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: capacitor
      app.kubernetes.io/instance: capacitor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: capacitor
        app.kubernetes.io/instance: capacitor
    spec:
      serviceAccountName: capacitor
      containers:
        - name: capacitor
          image: ghcr.io/gimlet-io/capacitor:v0.4.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 100
            seccompProfile:
              type: RuntimeDefault
      securityContext:
        fsGroup: 999
