cluster/apps/capacitor/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: flux-system
  labels:
    app.kubernetes.io/name: capacitor
    app.kubernetes.io/instance: capacitor
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: capacitor
    app.kubernetes.io/instance: capacitor
